--- a/seafile-nginx.conf
+++ b/seafile-nginx.conf
@@ -4,12 +4,12 @@ server {
         ssl on;
         ssl_certificate           /etc/nginx/certs/seafile.crt;
         ssl_certificate_key       /etc/nginx/certs/seafile.key;
-        ssl_protocols             SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols             TLSv1 TLSv1.1 TLSv1.2;
         ssl_prefer_server_ciphers on; 
-        ssl_ciphers               "EECDH+AESGCM EDH+AESGCM EECDH -RC4 EDH -CAMELLIA -SEED !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS !RC4";
-        
+        ssl_ciphers               "AES256+EECDH:AES256+EDH:!aNULL";
+
         server_name %SEAFILE_DOMAIN_NAME%;
- 
+
         location / {
                 fastcgi_pass    127.0.0.1:8000;
                 fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
@@ -24,14 +24,20 @@ server {
                 fastcgi_param   SERVER_PORT         $server_port;
                 fastcgi_param   SERVER_NAME         $server_name;
  
-                fastcgi_param   HTTPS on;
-                fastcgi_param   HTTP_SCHEME https;
+                fastcgi_param   HTTPS               on;
+                fastcgi_param   HTTP_SCHEME         https;
+
+                access_log      /var/log/nginx/seahub.access.log;
+                error_log       /var/log/nginx/seahub.error.log;
         }
  
         location /seafhttp {
                 rewrite ^/seafhttp(.*)$ $1 break;
                 proxy_pass http://127.0.0.1:8082;
                 client_max_body_size 0;
+
+                access_log      /var/log/nginx/seafhttp.access.log;
+                error_log       /var/log/nginx/seafhttp.error.log;
         }
  
         location /media {
