--- a/seafile-nginx.conf
+++ b/seafile-nginx.conf
@@ -9,8 +9,11 @@ server {
         ssl_ciphers               "AES256+EECDH:AES256+EDH:!aNULL";
 
         server_name %SEAFILE_DOMAIN_NAME%;
+        server_tokens off;
 
         location / {
+                add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
+
                 fastcgi_pass    127.0.0.1:8000;
                 fastcgi_param   SCRIPT_FILENAME     $document_root$fastcgi_script_name;
                 fastcgi_param   PATH_INFO           $fastcgi_script_name;
@@ -32,9 +35,13 @@ server {
         }
  
         location /seafhttp {
-                rewrite ^/seafhttp(.*)$ $1 break;
-                proxy_pass http://127.0.0.1:8082;
-                client_max_body_size 0;
+                rewrite                 ^/seafhttp(.*)$ $1 break;
+                
+                proxy_pass              http://127.0.0.1:8082;
+                proxy_connect_timeout   36000s;
+                proxy_read_timeout      36000s;
+                
+                client_max_body_size    0;
 
                 access_log      /var/log/nginx/seafhttp.access.log;
                 error_log       /var/log/nginx/seafhttp.error.log;
